name:                assembler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JakobBruenker/assembler#readme
license:             BSD3
license-file:        LICENSE
author:              Jakob Bruenker
maintainer:          jakob.bruenker@gmail.com
copyright:           Jakob Bruenker 2016
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable assembler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-type-defaults -Wno-missing-signatures
  build-depends:       base
                     , assembler
                     , mtl >= 2.2 && < 3
                     , containers >= 0.5 && < 1
                     , lens >= 4.15 && < 5
  default-language:    Haskell2010

test-suite assembler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , assembler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JakobBruenker/assembler
